0.16

- Fey::SQL::Select did not allow outer joins using table
  aliases. Reported by Aristotle Pagaltzis. RT #40856.


0.15    2008-10-28

- Added Fey::SQL::Select->select_clause_elements(), most for the
  benefit of Fey::ORM.


0.14    2008-09-19

- Fey did not handle this join correctly:

    $q->from( $s->table('User') );
    $q->from( $s->table('User'), $s->table('UserGroup') );

  It added a spurious comma so you got

    FROM "User", JOIN ...

  Reported by Aristotle Pagaltzis.

- The Fey::FK docs for the constructor did not name the parameters it
  expects correctly. Reported by Aristotle Pagaltzis.


0.13    2008-09-19

- Including a table in a from clause failed. Now the Fey::Schema
  object will accept a table alias as a parameter for the
  foreign_keys_between_tables() method. When given an alias, it
  returns a Fey::FK object which contains columns from that
  alias. This faciliates creating SQL that joins on an alias. Reported
  by Aristotle Pagaltzis.


0.12    2008-09-01

- Changes to work with the latest versions of Moose.


0.11    2008-08-26

- 0.10 was missing a dependency - MooseX::AttributeHelpers.


0.10    2008-08-25

- Optimizations to cache frequently used (and rarely changing) method
  return values as attributes.

- As a result of the above, several methods that used to return arrays
  now return array references. These are Fey::FK->column_pairs(),
  Fey::Table->candidate_keys(), and Fey::Table->primary_key(), and
  Fey::Literal::Function->args().

- Overloaded objects are now handled (mostly) correctly when used as
  parameters in SQL statements. I say mostly because overloading in
  Perl is so broken that it's not possible to deal with them 100%
  correctly.


0.09    2008-07-31

- If a where clause had a subgroup after a comparison (like "WHERE x =
  1 AND ( y = 2 )", it didn't properly add the needed "AND".


0.08    2008-07-02

- The fix for "SELECT statements with multiple joins generated bogus